# SoccerDiffusion

./: .gitignore  .pre-commit-config.yaml  README.md  _config.yml  pyproject.toml  train.py  train_diffusion_transformer.py  train_dis.py  train_gru_robot_data.py  train_robot_data.py  train_robot_dis.py  train_robot_multi_joint.py  train_transformer_robot_data.py
.github/: pull_request_template.md
.github/actions/setup-repo/: action.yml
.github/workflows/: create_db.yml  dummy_db.yml  test-dataset.yml  test_dataset.yml
data/: schema.py
ddlitlab2024/: __init__.py
ddlitlab2024/dataset/: __init__.py  analyze_db.ipynb  analyze_raw_data.ipynb  cli.py  db.py  dino.py  dummy_data.py  errors.py  lichtblick_layout.json  main.py  models.py  pytorch.py  reader.py  recording2mcap.py  schema.py  torch.py  vizualization.ipynb
ddlitlab2024/dataset/cli/: args.py  run.py
ddlitlab2024/dataset/converters/: converter.py  game_state_converter.py  image_converter.py  synced_data_converter.py
ddlitlab2024/dataset/imports/: data.py  model_importer.py
ddlitlab2024/dataset/mappers/: rosbag_mapper.py
ddlitlab2024/dataset/resampling/: max_rate_resampler.py  original_rate_resampler.py  previous_interpolation_resampler.py  (+1 more)
ddlitlab2024/ml/: __init__.py  fetch_data.py  run_diffusion_context_transformer_robotpy  run_diffusion_transformer.py  run_diffusion_transformer_robot.py  train_diffusion_context_transformer_robot.py  train_diffusion_transformer.py  train_diffusion_transformer_robot.py  train_robot_dis.py  train_robot_multi_joint.py
ddlitlab2024/utils/: embed_parameters.py  utils.py
docs/: data_pipeline.md  gen-pdf.sh
soccer_diffusion/: __init__.py
soccer_diffusion/dataset/: __init__.py  db.py  dummy_data.py  pytorch.py  recording2mcap.py
soccer_diffusion/ml/: __init__.py
soccer_diffusion/utils/: embed_parameters.py  utils.py
tests/dataset/: conftest.py
(+74 files in other folders)
