[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ddlitlab"
version = "0.0.1"
readme = "README.md"
repository = "https://github.com/bit-bots/ddlitlab2024"
authors = [
  "Florian Vahl",
  "Jan Gutsche",
  "Joern Griepenburg",
]
description = ""
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^2.0.36"

[tool.ruff]
fix = true
line-length = 120

[tool.ruff.lint]
# Additionally enable the following rules
# - pyflakes (`F`)
# - pycodestyle errors (`E`)
# - pycodestyle warnings (`W`)
# - flake8-bugbear warnings (`B`)
# - isort import sorting (`I`)
# - pep8-naming convenrtions (`N`)
# - pyupgrade prefer newer language constructs (`UP`)
select = ["F", "E", "B", "W", "I", "N", "UP"]
