[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ddlitlab2024"
version = "0.0.1"
readme = "README.md"
repository = "https://github.com/bit-bots/ddlitlab2024"
authors = [
  "Florian Vahl",
  "Jan Gutsche",
  "Joern Griepenburg",
]
description = ""

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.36"
torch = "^2.5.0"
diffusers = "^0.31.0"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
torchinfo = "^1.8.0"
numpy = "^2.1.2"
tqdm = "^4.66.5"
ema-pytorch = "^0.7.3"

[tool.ruff]
fix = true
line-length = 120

[tool.ruff.lint]
# Additionally enable the following rules
# - pyflakes (`F`)
# - pycodestyle errors (`E`)
# - pycodestyle warnings (`W`)
# - flake8-bugbear warnings (`B`)
# - isort import sorting (`I`)
# - pep8-naming convenrtions (`N`)
# - pyupgrade prefer newer language constructs (`UP`)
select = ["F", "E", "B", "W", "I", "N", "UP"]

[tool.poetry.scripts]
create-db = "ddlitlab2024.dataset.schema:main"
